# kb-platform-python-services

./: .env.example  .gitignore  API.md  ARCHITECTURE.md  Dockerfile.core  Dockerfile.worker  README.md  WORKER.md  pyproject.toml
core/: config.py
core/api/: main.py
core/models/: database.py  schemas.py
core/services/: rag.py
shared/: config.py
shared/models/: database.py  schemas.py
shared/services/: qdrant.py
tests/activities/: __init__.py  test_delete_from_s3.py  test_download_from_s3.py  test_generate_embeddings.py  test_parse_document.py  test_update_status.py  test_upsert_to_qdrant.py
tests/core/: test_api.py
tests/core/services/: test_rag.py
tests/shared/: test_qdrant.py
workers/: activities.py  worker.py  workflows.py
