[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kb-platform-python-services"
version = "1.0.0"
description = "Python services for KB platform - LlamaIndex Core and Temporal Workers"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "core"}, {include = "workers"}, {include = "shared"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
llama-index = "^0.9.0"
openai = "^1.5.0"
qdrant-client = "^1.7.0"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
temporalio = "^1.4.0"
boto3 = "^1.28.0"
pypdf = "^3.17.0"
python-docx = "^1.0.0"
beautifulsoup4 = "^4.12.0"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
grpcio-tools = "^1.60.0"

[tool.poetry.scripts]
core = "core.api:main"
worker = "workers.worker:main"
